css/main.css
html {
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  font-family: "Noto Sans", sans-serif;
  line-height: 1.5;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

[lang="ja"] {
  font-family: "Noto Sans JP", sans-serif;
  font-style: normal;
}

body {
  margin: 0;
}

img {
  display: block;
  width: 100%;
}

img-flex {
  display: flex;
}

header {
  padding: 1rem;
  display: grid;
  grid-template-columns: 1fr;
  justify-items: center;
  margin-bottom: 1.5rem;
  padding-bottom: 0;
}

h1 {
  font-size: 2rem;
  margin: 0;
}

.header-text p {
  font-size: 1.125rem;
  margin: 0;
}

.header-text {
  padding-top: .5rem;
  padding-bottom: .5rem;
  align-items: center;
  margin-bottom: 0;
}

nav {
  padding: .5rem;
  margin-top: 0;
  padding-bottom: 0;
}

nav ul {
  padding-left: 0;
  margin-top: 0;
  display: grid;
  gap: 1rem;
  grid-template-areas:
    "viewing gravel symbolism";
  list-style: none;
  grid-auto-flow: column dense;
}

li a {
  font-size: 1.125rem;
  justify-self: center;
  color: #3783a3;
  font-weight: 100;
}

hr {
  color: #e2e2e2;
  border: 16px;
}

.subheader {
  padding: 1rem;
  padding-bottom: 0;
  padding-top: 0;
  border: .2rem solid #e2e2e2;
  border-left-width: 0px;
  border-right-width: 0px;
  margin-bottom: 1.5rem;
}

h2 {
  margin: 0;
  padding: 1rem;
  padding-bottom: 1rem;
  font-size: 2rem;
  max-width: 30em;
  text-align: center;
  font-weight: 400;
}

.subheader p {
  margin: 0;
  padding: 1rem;
  font-size: 1.125rem;
  margin-bottom: 1rem;
  max-width: 30em;
  text-align: center;
  justify-content: center;
}

section {
  display: block;
  padding: 1rem;
  padding-top: 0;
  padding-bottom: 0;
}

section img {
  margin-bottom: 1.5rem;
}

section p{
  font-size: 1rem;
  margin-bottom: 1.5rem;
  padding-bottom: .5rem;
}

h3 {
  font-size: 1.5rem;
  margin-bottom: 0;
}

.subhead p {
  margin-top: 0;
  font-size: 1.125rem;
  margin-bottom: 1.5rem;
}

.button{
  border: .2rem solid #3783a3;
  border-radius: .3rem;
  padding: .5em 1em .6em;
}

.button a{
  text-decoration: none;
  color: #3783a3;
}

footer {
  margin: 0;
  border: .2rem solid #e2e2e2;
  border-left: 0;
  border-right: 0;
  border-bottom: 0;
}

footer p {
  font-size: 1rem;
  text-align: center;
}

